Fixing bug where infobox overflow wiki panel

--- a/web/frontend/sass/indexes/wiki.index.scss
+++ b/web/frontend/sass/indexes/wiki.index.scss
@@ -24,6 +24,9 @@
 }
 
 #mainPanel {
+	/* Ensure panel stretches to include all of infobox */
+	overflow: hidden;
+
 	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-size: 1.5rem;
 	line-height: 1.4;
